chang get user to return user dto, add method to look for user by username
